react-app/src/components/Chat/chat.css
.messagecontainer{
    display: flex;
    align-content:flex-end;
    width: 100%;

    height: 87%;
}
.welcomemessage{
    align-self: flex-end;
}

.messagebox{
    align-self: flex-end;
    width: 100%;
    color: white;
    font-family: Whitney,"Helvetica Neue",Helvetica,Arial,sans-serif;
    overflow-wrap: break-word;
}
.chatcontainer{
    margin-left: 20px;

    height: 100%;
    width: 80%;
}

.chatbox{
    width: 100%;
    display: flex;
    flex-direction: row;
    height: 5%;

    margin-top: 20px;
}

.chatboxinput{
    padding: 11px 10px 11px 0px;
    width: 100%;
    height: 20px;
    background-color: #424549;
    border: none;
    border-radius: 5px;
    color: white;
    font-family: Whitney,"Helvetica Neue",Helvetica,Arial,sans-serif
}

.submitchat{
    display: none;
}

.messageseparator{

    width: 100%;
    border-bottom: 1px solid rgba(79, 84, 92, 0.48);
}

